--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -532,9 +532,9 @@ workflows:
         # - eslint
 
         #      - run-danger:
-        filters:
-          branches:
-            ignore: master
+        # filters:
+        #  branches:
+        #    ignore: master
 
 
 
