--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,18 +4,19 @@ buildscript {
     ext {
         firebaseVersion = "17.6.0"
         kotlin_version = '1.3.41'
-        buildToolsVersion = "29.0.2"
-        minSdkVersion = 19
+        buildToolsVersion = "29.0.3"
+        minSdkVersion = 21
         compileSdkVersion = 29
         targetSdkVersion = 29
         supportLibVersion = "28.0.0"
+        ndkVersion = "20.1.5948944"
     }
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.3'
+        classpath 'com.android.tools.build:gradle:4.1.0'
         classpath 'com.google.gms:google-services:4.3.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
